--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Nathan Ng'ethe</h5>
+            <h5 class="card-title">Tina Tasha</h5>
             <p class="card-text myself">I am currently a student at Moringa school learning to write my first lines of code.<br> I try as much as possible to make sense out of the code I write thus making coding look as easy as ABC, but don't be
               fooled, it's tough.<br> And along the
               way, my
